# ElasticFusion

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Main.cpp  MainController.cpp  MainController.h  README.md  build.sh  imgui.ini  install.txt
CMakeModules/: CudaDetect.cmake  FindLAPACK.cmake  FindOpenNI2.cmake
Core/: CMakeLists.txt  Deformation.cpp  Deformation.h  ElasticFusion.cpp  ElasticFusion.h  Ferns.cpp  Ferns.h  GPUTexture.cpp  GPUTexture.h  GlobalModel.cpp  GlobalModel.h  IndexMap.cpp  IndexMap.h  PoseMatch.h
Core/Cuda/: convenience.cuh  cudafuncs.cu  cudafuncs.cuh  estimate.cu  estimate.cuh  operators.cuh  reduce.cu  types.cuh
Core/Cuda/containers/: device_array_impl.hpp  device_memory.cpp  device_memory.hpp  kernel_containers.hpp
Core/Shaders/: ComputePack.cpp  ComputePack.h  FeedbackBuffer.cpp  FeedbackBuffer.h  FillIn.cpp  FillIn.h  Resize.cpp  Resize.h  Shaders.h  Uniform.h  Vertex.cpp  Vertex.h  color.glsl  combo_splat.frag  data.geom  depth_bilateral.frag  depth_norm.frag  draw_feedback.frag  draw_feedback.vert  draw_global_surface.geom  draw_global_surface.vert  empty.vert  fxaa.frag  index_map.frag  index_map.vert  init_unstable.vert  resize.frag  sample.geom  sample.vert  update.vert  vertex_feedback.vert  visualise_textures.frag
Core/Utils/: CholeskyDecomp.cpp  CholeskyDecomp.h  DeformationGraph.cpp  DeformationGraph.h  GraphNode.h  Img.h  Intrinsics.cpp  Intrinsics.h  Jacobian.h  OdometryProvider.h  OrderedJacobianRow.h  Parse.cpp  Parse.h  RGBDOdometry.cpp  RGBDOdometry.h  Resolution.cpp  Resolution.h  Stopwatch.h
Core/src/: CMakeLists.txt  Defines.h  Deformation.cpp  Deformation.h  ElasticFusion.cpp  ElasticFusion.h  Ferns.cpp  Ferns.h  FindSuiteSparse.cmake  GPUTexture.h  GlobalModel.cpp  GlobalModel.h  IndexMap.h  PoseMatch.h
Core/src/Cuda/: cudafuncs.cu  cudafuncs.cuh  reduce.cu  types.cuh
Core/src/Cuda/containers/: device_array.hpp  device_memory_impl.hpp
Core/src/Shaders/: ComputePack.cpp  FeedbackBuffer.h  Resize.cpp  Resize.h  Shaders.h  Uniform.h  Vertex.cpp  Vertex.h  copy_unstable.geom  copy_unstable.vert  data.frag  data.vert  depth_metric.frag  depth_splat.frag  draw_global_surface.frag  draw_global_surface.geom  draw_global_surface_phong.frag  fill_normal.frag  fill_rgb.frag  fill_vertex.frag  geometry.glsl  quad.geom  splat.vert  surfels.glsl  vertex_feedback.geom
Core/src/Utils/: CholeskyDecomp.cpp  DeformationGraph.cpp  DeformationGraph.h  GPUConfig.h  Img.h  Intrinsics.cpp  Intrinsics.h  OdometryProvider.h  OrderedJacobianRow.h  Parse.cpp  Parse.h  RGBDOdometry.cpp  RGBDOdometry.h  Resolution.cpp  Resolution.h  Stopwatch.cpp  Stopwatch.h  WindowsExtras.cpp  WindowsExtras.h
GPUTest/src/: CMakeLists.txt  GPUTest.cpp
GUI/src/: CMakeLists.txt  FindBLAS.cmake  FindOpenNI2.cmake  FindRealSense.cmake  FindRealSense2.cmake  FindSuiteSparse.cmake  Findefusion.cmake  MainController.cpp  MainController.h
GUI/src/Tools/: CameraInterface.h  GUI.h  GroundTruthOdometry.cpp  GroundTruthOdometry.h  JPEGLoader.h  LiveLogReader.cpp  LiveLogReader.h  LogReader.h  OpenNI2Interface.cpp  OpenNI2Interface.h  RawLogReader.cpp  RawLogReader.h  RealSenseInterface.cpp  RealSenseInterface.h
Tools/: CameraInterface.h  GUI.h  GroundTruthOdometry.cpp  GroundTruthOdometry.h  JPEGLoader.h  LiveLogReader.cpp  LiveLogReader.h  LogReader.h  OpenNI2Interface.cpp  OpenNI2Interface.h  RawLogReader.cpp  RawLogReader.h  RealSenseInterface.cpp  RealSenseInterface.h  ThreadMutexObject.h
